fix dark mode for pipeline view

--- a/src/styles/_darkmode.scss
+++ b/src/styles/_darkmode.scss
@@ -206,6 +206,54 @@ html[data-color-mode='dark'][data-theme~='dark:dark'] {
     }
   }
 
+  .css-1jmpi03 {
+    // pipeline header section
+    background-color: var(--ds-surface, #fff);
+  }
+
+  .css-1msqval {
+    // pipeline steps
+    & > a > div,
+    & div {
+      background-color: unset;
+    }
+
+    & > a:hover {
+      background-color: var(--ds-background-neutral-subtle-hovered, #f4f5f7);
+    }
+
+    &:not(:first-of-type)::before {
+      // separator line between pipeline steps
+      background-color: var(--ds-border, rgba(9, 30, 66, 0.13));
+    }
+    &:not(:last-of-type)::after {
+      // separator line between pipeline steps
+      background-color: var(--ds-border, rgba(9, 30, 66, 0.13));
+    }
+  }
+
+  .css-z17u4a {
+    // selected pipeline step
+    & > a > div,
+    & div {
+      background-color: var(--ds-background-selected, #f4f5f7);
+    }
+
+    &:not(:first-of-type)::before {
+      // separator line between pipeline steps
+      background-color: var(--ds-border, rgba(9, 30, 66, 0.13));
+    }
+    &:not(:last-of-type)::after {
+      // separator line between pipeline steps
+      background-color: var(--ds-border, rgba(9, 30, 66, 0.13));
+    }
+  }
+
+  .css-1xsbebt {
+    // background of icon in reports dialog
+    background: unset;
+  }
+
   color-scheme: dark;
   --ds-text: #b6c2cf;
   --ds-text-mediumEmphasis: #9fadbc; // Bitbucket
